--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ghidra-rizzo"]
 	path = ghidra-rizzo
-	url = git@github.com:austinc3030/ghidra-rizzo.git
+	url = git@github.com:dynacylabs/ghidra-rizzo.git
